# edgemesh

./: .gitignore  CHANGELOG.md  DISCLAIMER.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md  docker-compose.yml  install.ps1  install.sh  pyproject.toml
demos/: 01_unify_backends.py  02_fit_models_to_hardware.py  03_swarm_scheduling.py  04_privacy_relay.py  05_live_gateway.py  06_router_failover.py  07_distributed_execution.py  08_scatter_gather.py  09_credits_reputation.py  10_sharding_presets.py  11_auth_audit.py  12_rate_limiting.py  13_streaming_metered.py  14_cluster_join.py  15_relay_directory.py  16_privacy_gate.py  17_metrics_observability.py  18_vscode_integration.py  19_error_handling.py  20_end_to_end.py  _common.py  run_all.py
deploy/: README.md  edgemesh.service
docs/: ARCHITECTURE.md  DEMOS.md  DEV_AGENT.md  INTEROP.md  USE_CASES.md
edgemesh/: __init__.py  agent.py  audit.py  auth.py  backends.py  catalog.py  cli.py  cluster.py  devtools.py  executor.py  gateway.py  hardware.py  integrations.py  ledger.py  limits.py  manager.py  mcp_server.py  menu.py  metrics.py  presets.py  profile.py  protocol.py  registry.py  relay.py  relay_dir.py  router.py  scheduler.py  swarm.py  wizard.py
edgemesh-vscode/: README.md  package-lock.json  package.json  tsconfig.json
examples/: catalog.txt  help.txt
tests/: test_agent.py  test_auth_audit.py  test_auth_edges.py  test_backends_edges.py  test_catalog_edges.py  test_demos.py  test_devtools.py  test_edgemesh.py  test_executor.py  test_executor_edges.py  test_expansion.py  test_gateway_edges.py  (+20 more)
(+10 files in other folders)
