[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edgemesh"
version = "0.13.1"
description = "Cross-OS federated gateway unifying every OpenAI-compatible inference backend behind one model catalog and one /v1 endpoint"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "LicenseRef-COCL-1.0" }
authors = [{ name = "Cognis Digital LLC" }]
keywords = ["llm", "inference", "edge", "gateway", "openai-compatible", "ollama", "llama-cpp", "distributed", "fleet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/cognis-digital/edgemesh"
Issues = "https://github.com/cognis-digital/edgemesh/issues"

[project.scripts]
edgemesh = "edgemesh.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7", "cryptography>=42"]
relay = ["cryptography>=42"]

[tool.hatch.build.targets.wheel]
packages = ["edgemesh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
